--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,10 @@
             <version>1.18.34</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
 
     </dependencies>
 
